<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/checks_other_first_name"
        style="@style/EditTextStyle.ChecksOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:hint="@string/checks_other_first_name_hint"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/checks_other_last_name"
        style="@style/EditTextStyle.ChecksOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_below="@+id/checks_other_first_name"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:hint="@string/checks_other_last_name_hint"/>

    <Button
        android:id="@+id/checks_other_next"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_8"
        android:enabled="false"
        android:text="@string/checks_other_next"
        android:theme="@style/LightishBlueButtonTheme"/>
</RelativeLayout>