<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_grey"
        android:textSize="@dimen/text_18sp"
        android:layout_above="@+id/checks_code_enter"
        style="@style/OpenSansLight"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
        android:layout_marginRight="@dimen/activity_horizontal_margin_16"
        android:text="@string/checks_code_text"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/checks_code_enter"
        style="@style/EditTextStyle.ChecksCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:inputType="number"
        android:hint="@string/checks_code_enter"/>

    <Button
        android:id="@+id/checks_code_done"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_8"
        android:enabled="false"
        android:text="@string/checks_code_done"
        android:theme="@style/LightishBlueButtonTheme"/>
</RelativeLayout>