<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ProgressBar
        android:id="@+id/change_password_progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:indeterminate="true"
        android:visibility="gone"/>


    <ScrollView
        android:id="@+id/change_password_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/change_password_old"
                style="@style/EditTextStyle.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_40"
                android:hint="@string/change_password_old"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/change_password_new"
                style="@style/EditTextStyle.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_4"
                android:hint="@string/change_password_new"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/change_password_repeat"
                style="@style/EditTextStyle.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_4"
                android:hint="@string/change_password_repeat"/>

            <TextView
                android:id="@+id/change_password_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin_44"
                android:layout_marginTop="@dimen/activity_vertical_margin_24"
                android:text="@string/change_password_forgot"
                android:textColor="@color/apple_green"
                android:textSize="@dimen/text_16sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>