<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:orientation="vertical">

    <ProgressBar
        android:id="@+id/view_child_progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"

        android:indeterminate="true"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_24"
                android:layout_marginTop="@dimen/activity_vertical_margin_16"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <com.ltst.core.ui.AvatarView
                        android:id="@+id/view_child_avatar"
                        android:layout_width="@dimen/avatar_view_avatar_size"
                        android:layout_height="@dimen/avatar_view_avatar_size"
                        android:layout_gravity="center"
                        app:av_background="@drawable/avatar_child_holder_80"
                        app:show_under_avatar="false"/>
                </FrameLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_child_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_24sp"/>

                    <TextView
                        android:id="@+id/view_child_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_24sp"/>

                    <TextView
                        android:id="@+id/view_child_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin_6"
                        android:freezesText="true"
                        android:textSize="@dimen/text_14sp"
                        />

                    <TextView
                        android:id="@+id/view_child_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:textSize="@dimen/text_14sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                android:layout_marginTop="@dimen/activity_vertical_margin_24">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_child_messages_button"
                    android:theme="@style/AppButton"/>


                <Button
                    android:id="@+id/view_child_add_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_child_activity_button"
                    android:theme="@style/AppButton"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin_24"
                android:background="@color/separator_grey"/>



            <com.ltst.core.ui.TwoLineTextViewWithIcon
                android:id="@+id/view_child_family_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:left_icon="@drawable/ic_family"
                app:main_text="@string/view_child_no_family"
                app:right_arrow="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_grey"/>


            <com.ltst.core.ui.TwoLineTextViewWithIcon
                android:id="@+id/view_child_invite_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:left_icon="@drawable/ic_path"
                app:main_text="@string/view_child_invite_family"
                app:right_arrow="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_grey"/>

            <LinearLayout
                android:id="@+id/view_child_blood_medical_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_26"
                android:layout_marginTop="@dimen/activity_vertical_margin_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tratment"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_24"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_child_blood_group"
                        style="@style/RobotoLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>

                    <TextView
                        android:id="@+id/view_child_blood_genotype"
                        style="@style/RobotoLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>

                    <TextView
                        android:id="@+id/view_child_blood_allergies"
                        style="@style/RobotoLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_child_information_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_26"
                android:layout_marginTop="@dimen/activity_vertical_margin_16"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/activity_vertical_margin_8">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_resume"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_24"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_child_information"
                        style="@style/RobotoLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey_blue"
                        android:textSize="@dimen/text_16sp"/>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>